kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartmedicare
  labels:
    name: smartmedicare
    environment: production
